[package]
name = "openssl-src" # "libressl-src"
version = "111.13.0+3.1.4"
authors = ["Dubiousjim <dubiousjim@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Source of LibreSSL and logic to build it."
repository = "https://github.com/dubiousjim/libressl-src"
readme = "README.md"
exclude = ['libressl/*']

[workspace]
members = ['testcrate']

[dependencies]
autotools = "0.3"

[patch.crates-io]
# Any clients need this patch until autotools > 0.2.1 is published
# autotools = { git = "https://github.com/lu-zero/autotools-rs" }
autotools = { git = "https://github.com/dubiousjim/autotools-rs", branch = "master" }
